# c67-mcp

./: .gitignore  .laio.yaml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml  release-v2.yaml  release.yaml
Formula/: c67-mcp.rb
data/: aarch64-darwin.json  aarch64-linux.json  x86_64-darwin.json  x86_64-linux.json
scripts/: test_mcp.json  test_mcp.sh  test_sequence.json  test_simple.json  test_tool_calls.sh  test_tool_calls_long.sh
src/: api_tests.rs  client.rs  client_tests.rs  formatting.rs  formatting_tests.rs  handler.rs  lib.rs  main.rs  security_tests.rs  server.rs  server_tests.rs
tests/: functional_tests.rs  integration_tests.rs
tools/: release.nu
