[package]
name = "c67-mcp"
version = "0.1.1"
description = ""
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
rmcp = { version = "0.3.2", features = ["transport-io"] }
serde = { version = "1.0.226", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "2.12", features = ["json", "tls"] }
rustls = "0.23"
rustls-native-certs = "0.8"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.3"
wiremock = "0.6.2"
serde_json = "1.0.145"
