[package]
name = "c67-mcp"
version = "0.2.2"
description = ""
edition = "2024"

[dependencies]
serde_json = "1.0.145"
rustls = "0.23.32"
rustls-native-certs = "0.8.2"
anyhow = "1.0.100"
tracing = "0.1.41"

[dependencies.tokio]
version = "1.47.1"
features = ["full"]

[dependencies.rmcp]
version = "0.8.1"
features = ["transport-io"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.clap]
version = "4.5.48"
features = ["derive"]

[dependencies.ureq]
version = "3.1.2"
features = [
    "json",
    "_tls",
    "platform-verifier",
]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]

[dev-dependencies]
tokio-test = "0.4.4"
wiremock = "0.6.5"
serde_json = "1.0.145"
